# ovelhainvest

./: .claude.json  .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_START.md  DESIGN.md  README.md  STITCH_PROMPT.md  docker-compose.homelab.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: alerts.py  allocation.py  connections.py  finance.py  import_csv.py  journal.py  markets.py  performance.py  price_history.py  reports.py  research.py  simulation.py  tax.py  valuation.py
backend/app/db/: redis_client.py  supabase_client.py
backend/app/migrations/: 001_initial_schema.sql  002_tax_lots.sql  003_performance_tables.sql  004_journal_alerts.sql  005_keep_alive.sql  006_alert_rules_channel.sql  (+1 more)
backend/scripts/: _deploy_run.py  _fix_tunnel_and_restart.py  _homelab_deploy_all.py  _redeploy_v123.py  all_migrations.sql  apply_db_migrations.py  apply_migration_007.py  apply_migrations.py  audit_api_errors.py  check_env.py  clean_retroactive_snapshots.py  create_user.py  deploy_to_homelab.py  generate_retroactive_snapshots.py  holdings_template.csv  import_holdings_csv.py  insert_placeholder_holdings.py  n8n_activate.py  n8n_import.py  patch_n8n_telegram_credentials.py  post_migration_setup.py  prepare_n8n_workflows.py  rebuild_snapshots.py  seed_finance.py  seed_thiago_accounts.py  setup_github_secrets.sh  setup_live_data.py  setup_telegram_webhook.py  smoke_test.py  test_n8n_workflows.py  verify_full_pipeline.py  verify_migrations.py
backend/tests/: test_integration.py
design/: DESIGN.md  (+2 more)
(+151 files in other folders)
