[project]
name = "ovelhainvest-backend"
version = "1.0.0"
description = "OvelhaInvest / Thiago Wealth OS — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.9.0",
    "pydantic-settings>=2.5.0",
    "yfinance>=0.2.40",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    # Analytics
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    # Caching
    "redis>=5.0.0",
    # PDF reports
    "weasyprint>=62.0",
    # Utilities
    "python-dateutil>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
